frontend/src/components/Header/Header.module.css
.HeaderContainer{
    background-color:rgb(202, 190, 190);
    /* overflow: hidden; */
    height: 100%;
    display: flex
}

.logocontainer{
    /* float: left; */
    width: auto;
    height: 100%
}

.logoimg{
    width: auto;
    height: 80%;
}

.sbar{
    float: left;
    width: 20%;
    height: 30px;
    margin: 12px;
    border: none;
}

.notifpic{
    float: right;
    width: 35px;
    height: 35px;
    margin: 4px;
}

.profpic{
    float: right;
    /* width: 20% */
    width: 20px;
    height: 20px;
}

.searchicon{
    width: 30px;
    height: 30px;
    margin: 12px;
    border: 1px solid black;
    background-color: rgba(35, 87, 86, 30%);
    cursor: pointer;
}
h1,h2{
    text-align: center;
    margin-top: auto;
    color: black;
}

